--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <li><a href="ex0919_2.html" target="_blank">9월19일 2 3교시</a></li>
         <li><a href="ex0926.html" target="_blank">9월26일 1 2교시</a></li>
         <li><a href="ex0926_3.html" target="_blank">9월26일 3교시</a></li>
+        <li><a href="ex1017_1.html" target="_blank">10월17일 1교시</a></li>
+        <li><a href="ex1017_2.html" target="_blank">10월17일 1교시</a></li>
+        <li><a href="ex1017_3.html" target="_blank">10월17일 2교시</a></li>
+        <li><a href="ex1017_4.html" target="_blank">10월17일 3교시</a></li>
+        <li><a href="ex1017_5.html" target="_blank">10월17일 3교시</a></li>
     </ul>
 </body>
 </html>
