--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li><a href="ex1017_3.html" target="_blank">10월17일 2교시</a></li>
         <li><a href="ex1017_4.html" target="_blank">10월17일 3교시</a></li>
         <li><a href="ex1017_5.html" target="_blank">10월17일 3교시</a></li>
+        <li><a href="ex1024_1.html" target="_blank">10월24일 1교시</a></li>
+        <li><a href="ex1024_2.html" target="_blank">10월24일 2교시</a></li>
+        <li><a href="ex1024_3.html" target="_blank">10월24일 3교시</a></li>
     </ul>
 </body>
 </html>
