--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <li><a href="ex1121_3.html" target="_blank">11월21일 3교시</a></li>
         <li><a href="ex1121_3_1.html" target="_blank">11월21일 3교시</a></li>
         <li><a href="ex1121_3_2.html" target="_blank">11월21일 3교시</a></li>
+        <li><a href="ex1128.html" target="_blank">11월28일 1교시</a></li>
+        <li><a href="ex1128_1.html" target="_blank">11월28일 1교시</a></li>
+        <li><a href="ex1128_2.html" target="_blank">11월28일 2교시</a></li>
+        <li><a href="ex1128_3.html" target="_blank">11월28일 3교시</a></li>
     </ul>
 </body>
 </html>
