--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         <li><a href="ex1128_1.html" target="_blank">11월28일 1교시</a></li>
         <li><a href="ex1128_2.html" target="_blank">11월28일 2교시</a></li>
         <li><a href="ex1128_3.html" target="_blank">11월28일 3교시</a></li>
+        <li><a href="ex1205.html" target="_blank">12월05일 1교시</a></li>
+        <li><a href="ex1205_2.html" target="_blank">12월05일 2교시</a></li>
+        <li><a href="ex1205_3.html" target="_blank">12월05일 3교시</a></li>
+        <li><a href="ex1205_3_3.html" target="_blank">12월05일 3교시</a></li>
     </ul>
 </body>
 </html>
