--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <li><a href="ex1205_2.html" target="_blank">12월05일 2교시</a></li>
         <li><a href="ex1205_3.html" target="_blank">12월05일 3교시</a></li>
         <li><a href="ex1205_3_3.html" target="_blank">12월05일 3교시</a></li>
-        <li><a href="ex1206_1.html" target="_blank">12월06일 1교시</a></li>
-        <li><a href="ex1206_2.html" target="_blank">12월06일 2교시</a></li>
+        <li><a href="ex1219_finalTest_1.html" target="_blank">12월19일 1교시</a></li>
+        <li><a href="ex1219_finalTest_2.html" target="_blank">12월19일 2교시</a></li>
     </ul>
 </body>
 </html>
